🐛 fix(Mobile Display)
Footer was messed up - the max-width created issues.

--- a/css/style.css
+++ b/css/style.css
@@ -446,4 +446,7 @@ li {
 		width: 100%;
 		max-width: none;
 	}
+	.col_footer{
+		max-width: none;
+	}
 }
